[gd_scene load_steps=5 format=2]

[ext_resource path="res://general/mode_nodes/mode_group.gd" type="Script" id=1]
[ext_resource path="res://general/node_factory/node_factory.gd" type="Script" id=2]
[ext_resource path="res://core/pimnet/field/field.gd" type="Script" id=3]
[ext_resource path="res://core/base_ui/subscreen/subscreen.tscn" type="PackedScene" id=4]

[node name="Field" groups=["fields"] instance=ExtResource( 4 )]
script = ExtResource( 3 )
__meta__ = {
"_edit_pinned_properties_": [ "_background_color" ]
}
_background_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="FieldLimit" type="Position2D" parent="." index="1"]
unique_name_in_owner = true
position = Vector2( 100, 100 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="EffectLayer" type="CanvasLayer" parent="." index="2"]
unique_name_in_owner = true
follow_viewport_enable = true

[node name="Queries" type="Node" parent="." index="3"]

[node name="Actions" type="Node" parent="." index="4"]

[node name="Metanavig" type="Node" parent="." index="5"]

[node name="ToolModes" type="Node" parent="." index="6"]
script = ExtResource( 1 )

[node name="Programs" type="Node" parent="." index="7"]
script = ExtResource( 1 )

[node name="ObjectFactory" type="Node" parent="." index="8"]
script = ExtResource( 2 )
_target_path = NodePath("..")

[node name="ProcessFactory" type="Node" parent="." index="9"]
script = ExtResource( 2 )
